--- a/第十章/vector/vector.vcxproj
+++ b/第十章/vector/vector.vcxproj
@@ -112,6 +112,9 @@
   <ItemGroup>
     <ClCompile Include="vector.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
